# medium_stories

./: .deploy_to_medium.py.swp  .gitignore  README.md  config.toml  data_generator.ipynb  datacamp_migrator.py  deploy_to_medium.py  pyproject.toml  q  requirements.txt  t  test.py  word_counter.py  youtube.ipynb
.ipynb_checkpoints/: data_generator-checkpoint.ipynb
2021/february/4_knn/: knn.ipynb
2024/: notebook.ipynb
annotating_plots/: annotating_plots.ipynb
cleaning_categorical_data/: cleaning_categorical_data.ipynb
cleaning_categorical_data/data/: demographics.csv  incorrect_blood.csv
common_data_problems/: common_data_problems.ipynb
common_data_problems/data/: hospital.xlsx
december_2020/1_decorators/: python_decorators.ipynb
december_2020/2_histogram_alternatives/: histogram_alternatives.ipynb
excalidraw_figures/: boxplot.excalidraw
fu-datasets/: script.py
hardest_of_pandas/: hardest_of_pandas.ipynb
hardest_of_pandas2/: hardest_of_pandas2.ipynb
hardest_of_pandas3/: hardest_of_pandas3.ipynb
learn_one_third_of_seaborn_relplot/: learn_third_of_seaborn_relplot.ipynb
mastering_most_common_categorical_plots/: mastering_most_common_categorical_plots.ipynb
merge_data_article/: create_tables.py  explore.ipynb  main.ipynb
progress_bars/: progress_bars.ipynb
project_setup/: project_setup.ipynb
qcut_cut/: binning_data_with_qcut_cut.ipynb
sample_projects/explore-poetry/: pyproject.toml
string_matching_w_fuzzy_wuzzy/: fuzzy_wuzzy.ipynb
styling_plots/: stying_plots.ipynb
working_with_ax_fig_objects/: working_with_fig_ax_objects.ipynb
(+552 files in other folders)
